--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <title>Random generator</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <H1>Hello world</H1>
